--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-admin": "node scripts/createAdmin.js",
+    "test-login": "node scripts/testLogin.js",
+    "debug-admin": "node scripts/debugAdmin.js",
+    "test-contact": "node scripts/testContactSubmission.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
+    "framer-motion": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.368.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2",
     "next": "^14.2.0",
+    "next-auth": "^4.24.12",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "framer-motion": "^11.0.0",
-    "react-intersection-observer": "^9.10.0",
-    "lucide-react": "^0.368.0"
+    "react-intersection-observer": "^9.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.0",
@@ -29,4 +40,3 @@
     "typescript": "^5.4.0"
   }
 }
-
